<resources>
    <string name="app_name">sample_project</string>
    <string name="price_template">%1$d $</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="search">Search</string>
    <string name="catalog">Catalog</string>
    <string name="find_products">Find products</string>
    <string name="enter_text">Enter text</string>
    <string name="category">category:</string>
    <string name="developer_profile">Developer profile</string>
    <string name="no_internet_access">No internet access :( \n\n Get access and restart the application</string>
</resources>