<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:id="@+id/search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/search_title"
        app:layout_constraintTop_toBottomOf="@id/search_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_hint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layoutDirection="rtl"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_baseline_search_24"
        app:strokeWidth="1dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/search_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/find_products"
        />

</androidx.constraintlayout.widget.ConstraintLayout>