<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_title"
            android:textAlignment="center"
            android:text="@string/settings"
            android:textSize="30sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/theme_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layoutDirection="rtl"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_baseline_brightness_2_24"
            app:strokeWidth="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/settings_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/change_theme"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vk_profile"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layoutDirection="rtl"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_developer_24"
            app:strokeWidth="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/theme_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/developer_profile"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>